simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-echo
  labels:
    app: simple-echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-echo
  template:
    metadata:
      labels:
        app: simple-echo
    spec:
      containers:
        - name: nginx
          image: gihyodocker/nginx:latest
          ports:
            - containerPort: 80
        - name: echo
          image: gihyodocker/echo:patched
          ports:
            - containerPort: 8080
