service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-echo
spec:
  selector:
    app: simple-echo
  ports:
    - name: http
      port: 80
